fixed styling and whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,7 @@ header {
   color: white;
   text-align: center;
 }
+
+main {
+  display: flex;
+}
