--- a/src/Folder/Folder.css
+++ b/src/Folder/Folder.css
@@ -1,3 +1,5 @@
-.folder {
+.Folder {
   border: 2px solid black;
+  padding: 10px;
+  margin: 10px;
 }
