--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -1,4 +1,4 @@
 .sidebar {
   background-color: #dddddd;
-  width: 20%;
+  flex: 1;
 }
